Tests updated + AIPrompter developed